# EmbarcaTechU4C4

00_Polling/: CMakeLists.txt  Polling.c
01_PollingBlink/: CMakeLists.txt  PollingBlink.c
02_Interrupt_Wokwi/: CMakeLists.txt  Interrupt.c
03_Interrupt_Blink_Wokwi/: CMakeLists.txt  Interrupt_Blink.c  wokwi.toml
04_Int_ComBounceWokwi/: Interrupt.c
05_IntDebounceWokwi/: CMakeLists.txt  Interrupt.c
06_ws2812_Escolha/: CMakeLists.txt
07_ws2812_Sequencial/: ws2812.c
