

cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PICO_BOARD pico_w CACHE STRING "Board type")

include(pico_sdk_import.cmake)
project(Polling C CXX ASM)
pico_sdk_init()
add_executable(Polling Polling.c )
pico_set_program_name(Polling "Polling")
target_link_libraries(Polling pico_stdlib)
pico_add_extra_outputs(Polling)